# HelloMultiplatform

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
hola-mundo/: CMakeLists.txt
hola-mundo/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  hola_mundo
hola-mundo/build_windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
hola-mundo/src/: main.cpp
